# Lemao

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/animation/: Cargo.toml
examples/animation/src/: main.rs
examples/audio/: Cargo.toml
examples/audio/src/: main.rs
examples/benchmark/: Cargo.toml  build.rs
examples/benchmark/assets/: inconsolata.bff
examples/benchmark/src/: main.rs
examples/circle/: Cargo.toml
examples/circle/assets/: inconsolata.bff
examples/circle/src/: main.rs
examples/disc/: Cargo.toml
examples/disc/src/: main.rs
examples/frame/: Cargo.toml
examples/frame/src/: main.rs
examples/framework/: Cargo.toml
examples/framework/src/: main.rs
examples/line/: Cargo.toml
examples/line/src/: main.rs
examples/paint/: Cargo.toml
examples/paint/src/: main.rs
examples/physics/: Cargo.toml
examples/physics/src/: main.rs
examples/rectangle/: Cargo.toml
examples/transformation/: Cargo.toml  build.rs
examples/ui/: Cargo.toml
examples/window/: Cargo.toml
games/snake/: .gitignore  Cargo.toml  build.rs  resources.rc
lemao-bin/: Cargo.toml  build.rs
lemao-bin/src/: main.rs
lemao-bindgen/: Cargo.toml  build.rs  lib.rs
lemao-bindgen/codegen/: mod.rs
lemao-core/: Cargo.toml
lemao-core/src/: lib.rs
lemao-core/src/audio/: context.rs  mod.rs
lemao-core/src/audio/samples/: mod.rs  storage.rs  wav.rs
lemao-core/src/audio/sounds/: mod.rs  storage.rs
lemao-core/src/renderer/: batcher.rs  bmp.rs  context.rs  mod.rs  shaders.rs  sprite.rs
lemao-core/src/renderer/cameras/: mod.rs  storage.rs
lemao-core/src/renderer/drawable/: animation.rs  circle.rs  disc.rs  frame.rs  line.rs  mod.rs  rectangle.rs  sprite.rs  storage.rs  text.rs  tilemap.rs
lemao-core/src/renderer/fonts/: bff.rs  mod.rs  storage.rs
lemao-core/src/renderer/objects/: sprite.rs
lemao-core/src/renderer/shaders/: default.frag  default.vert  mod.rs  storage.rs
lemao-core/src/renderer/shaders/fragment/: gradient.frag  gradient_horizontal.frag  gradient_radial.frag  solid_color.frag
lemao-core/src/renderer/shaders/vertex/: default.vert
lemao-core/src/renderer/shapes/: mod.rs  storage.rs
lemao-core/src/renderer/textures/: bmp.rs  mod.rs  storage.rs
lemao-core/src/utils/: binary.rs  hasher.rs  log.rs  mod.rs  rand.rs  storage.rs  time.rs
lemao-core/src/window/: context.rs  input.rs  mod.rs
lemao-framework/: Cargo.toml
lemao-framework/src/: app.rs  assets.rs  lib.rs
lemao-math/: Cargo.toml
lemao-math/src/: color.rs  gradient.rs  lib.rs  mat4x4.rs  vec2.rs  vec3.rs  vec4.rs
lemao-openal/: .gitignore  Cargo.toml  build.rs
lemao-opengl/: .gitignore  Cargo.toml  build.rs
lemao-opengl/src/: context.rs  lib.rs  pointers.rs
lemao-physics/: Cargo.toml
lemao-physics/src/: body.rs  constants.rs  context.rs  lib.rs  storage.rs
lemao-platforms/lemao-common-platform/: Cargo.toml
lemao-platforms/lemao-linux-x11/: .gitignore  Cargo.toml  build.rs
lemao-platforms/lemao-linux-x11/src/: input.rs  lib.rs  renderer.rs  window.rs
lemao-platforms/lemao-linux-x11/src/bindings/: mod.rs
lemao-platforms/lemao-windows-winapi/: .gitignore  Cargo.toml  build.rs
lemao-platforms/lemao-windows-winapi/src/: input.rs  lib.rs  renderer.rs  window.rs
lemao-ui/: Cargo.toml
lemao-ui/src/: context.rs  events.rs  lib.rs
lemao-winapi/: Cargo.toml  build.rs
lemao-winapi/src/: input.rs  renderer.rs  window.rs
lemao-winapi/src/bindings/: mod.rs  winapi.rs
(+155 files in other folders)
