[workspace]
members = [
    "lemao-bindgen",
    "lemao-core",
    "lemao-math",
    "lemao-openal",
    "lemao-opengl",
    "lemao-platforms/lemao-common-platform",
    "lemao-platforms/lemao-linux-x11",
    "lemao-platforms/lemao-windows-winapi",

    "examples/animation",
    "examples/audio",
    "examples/benchmark",
    "examples/frame",
    "examples/line",
    "examples/paint",
    "examples/rectangle",
    "examples/transformation",
    "examples/window",
]