[workspace]
members = [
    "lemao-bindgen",
    "lemao-core",
    "lemao-framework",
    "lemao-math",
    "lemao-openal",
    "lemao-opengl",
    "lemao-platforms/lemao-common-platform",
    "lemao-platforms/lemao-linux-x11",
    "lemao-platforms/lemao-windows-winapi",
    "lemao-ui",

    "examples/animation",
    "examples/audio",
    "examples/benchmark",
    "examples/circle",
    "examples/disc",
    "examples/frame",
    "examples/framework",
    "examples/line",
    "examples/paint",
    "examples/rectangle",
    "examples/transformation",
    "examples/ui",
    "examples/window",
]