[package]
name = "lemao-core"
version = "1.0.0"
edition = "2021"

[dependencies]
lemao-math = { path = "../lemao-math" }
lemao-openal = { path = "../lemao-openal" }
lemao-opengl = { path = "../lemao-opengl" }
lemao-common-platform = { path = "../lemao-platforms/lemao-common-platform" }
lemao-windows-winapi = { path = "../lemao-platforms/lemao-windows-winapi" }
lemao-linux-x11 = { path = "../lemao-platforms/lemao-linux-x11" }